--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,20 @@
 {
-    "name": "kevinbradwick/php-data-mapper",
-    "authors": [
-        {
-            "name": "Kevin Bradwick",
-            "email": "kevinbradwick@gmail.com"
-        }
-    ],
-    "require": {}
+  "name": "kevinbradwick/drift",
+  "authors": [
+    {
+      "name": "Kevin Bradwick",
+      "email": "kevinbradwick@gmail.com"
+    }
+  ],
+  "autoload": {
+    "psr-4": {
+      "Drift\\": "src/"
+    }
+  },
+  "require-dev": {
+    "phpunit/phpunit": "~5.2.1"
+  },
+  "require": {
+    "php": "~5.6"
+  }
 }
