--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,9 @@ php:
   - '7.0'
   - 'nightly'
 
-before_script:
+install:
   - composer install
 
-script: ./vendor/bin/phpunit --coverage-text -c test/phpunit.xml
+script:
+  - ./vendor/bin/phpcs --standard=PSR2 src/
+  - ./vendor/bin/phpunit --coverage-text -c test/phpunit.xml
