--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     }
   },
   "require-dev": {
-    "phpunit/phpunit": "~5.2.1"
+    "phpunit/phpunit": "~5.2.1",
+    "squizlabs/php_codesniffer": "~2.5.1"
   },
   "require": {
     "php": ">=5.6"
