--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,7 @@ install:
   - composer install
 
 before_script:
-  - printf "\n" | pecl install yaml
-  - echo "extension=yaml.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
-  - cat ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
+  - pecl install yaml
 
 script:
   - ./vendor/bin/phpcs --standard=PSR2 src/
