--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,21 @@
 {
-  "name": "kevinbradwick/drift",
+  "name": "kevbradwick/drift",
+  "description": "A lightweight PHP library for mapping data to PHP classes",
+  "version": "1.0.0-dev",
+  "type": "library",
+  "keywords": ["mapper", "data", "data mapper"],
+  "homepage": "https://github.com/kevbradwick/drift",
+  "license": "MIT",
   "authors": [
     {
       "name": "Kevin Bradwick",
       "email": "kevinbradwick@gmail.com"
     }
   ],
+  "support": {
+    "source": "https://github.com/kevbradwick/drift",
+    "issues": "https://github.com/kevbradwick/drift/issues"
+  },
   "autoload": {
     "psr-4": {
       "Drift\\": "src/"
